--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: sans-serif;
   font-weight: 600;
-  color: #222f3e;
+  color: #27ae60;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 32px;
